XMLExper/m12/m12_453_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLUnknown::ShallowEqual(const tinyxml2::XMLNode*) const’:
tinyxml2.cpp:1433:94: error: cannot dynamic_cast ‘unknown’ (of type ‘const class tinyxml2::XMLUnknown*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1433 |     return ( unknown && XMLUtil::StringEqual( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(unknown)->Value(), Value() ));
      |                                                                                              ^
diff: tinyxml2.o: No such file or directory
